# memos-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  utils.rs
src/api/: createMemo.rs  getMemos.rs  mod.rs  updateMemo.rs
