[package]
name = "use-memos-cli"
version = "0.1.0"
description = "A CLI tool for interacting with the Memos API through a self hosted instance."
license = "MIT"
edition = "2021"
repository = "https://github.com/richetechguy/memos-cli"
authors = ["RicheTechGuy <jonathan@blinkx.io>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
clap = { version = "4.5.19", features = ["derive"] }
anyhow = "1.0"
